--- a/HopeEnglish.html
+++ b/HopeEnglish.html
@@ -53,48 +53,49 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
-								<p> We conducted a comprehensive evaluation of the mobile app of Hope English, the leading brand of English learning in Taiwan. Evaluating method conducted includes Interaction map, Interviews, Persona, Scenario, Comparative Analysis, Survey, Heuristic Evaluation, and Usability Evaluation.</p>
+								<p> We conducted a comprehensive evaluation of the mobile app of Hope English, the leading brand of English learning in Taiwan. Evaluational methods conducted includes Interaction map, Interviews, Persona & Scenario, Comparative Analysis, Survey, Heuristic Evaluation, and Usability Test.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
-								<h3>How we address the issue</h3>
+								<h3>What evaluational methods are conducted</h3>
 								<p>To understand the app thoroughly and provide insightful suggestion to improve the user experience, we utilized the techniques mentioned below.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/inter2.png" alt=""/>
 								<h4>Interaction Map</h4>
-								<p>In the Interaction Map, we analyzed the views of the app and the relationship between each view or activities. This step gave us a comprehensive understanding of the product.</p>
+								<p>In the Interaction Map, we analyzed the views of the app and the relationship between each view (or activity). This step gave us a comprehensive understanding of our target product.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Interview.png" alt=""/>
 								<h4>Interview, Persona & Scenario</h4>
-								<p>In the next phase, we have to determine the target audience of the product. In order to do so, we conducted an Interview to understand peoples' incentive and behavior in online language learning activities. By digging into their scenario, attitude, and experience, we established three main Persona and Scenario of our target audience.</p>
+								<p>In order to determine the target audience of the product, we conducted an interview to understand peoples' incentives and behaviors in online language learning activities. By digging into their scenarios, attitudes, and experiences, we established three main Personas and their corresponding Scenarios of our target audience.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Survey.png" alt=""/>
 								<h4>Survey</h4>
-								<p>A Survey was conducted following qualitative analysis to further collect the quantitative data. We collected and analyzed data of participants' characteristics, attitudes, and behaviors in online language learning activities. Furthermore, we collect participants' self-report usability evaluation via the System Usability Scale (SUS).</p>
+								<p>A Survey was conducted following qualitative analysis to further collect the quantitative data. We collected participants' characteristics, attitudes, and behaviors in online language learning activities. Furthermore, we collect participants' self-report usability evaluation of our target product using the System Usability Scale (SUS).</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Comparative.png" alt=""/>
 								<h4>Comparative Analysis</h4>
-								<p>At the same time, a Comparative Analysis is conducted to better understand how other comparators design their product. We compare our client's design with others' to learn from the good ones and avoid poor design choices.</p>
+								<p>A Comparative Analysis is conducted to better understand how other comparators design their products. We compare our client's design with others' to learn from the good ones and avoid poor design choices.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Heuristic.png" alt=""/>
 								<h4>Heuristic Evaluation</h4>
-								<p>A Heuristic Evaluation is conducted by the researchers. Based on the 10 Heuristic principles established by Jakob Nielsen, I and my team set up scenarios, then each of us provided an individual evaluation of the violations of heuristic principles met in the scenario. We then generated our findings after debriefing and discussion.</p>
+								<p>A Heuristic Evaluation is conducted by the researchers. Based on the 10 Heuristic principles established by Jakob Nielsen, we set up scenarios, then each of us provided an individual evaluation of the violations of heuristic principles occurs in the scenario. We then generated our findings after debriefing and discussion.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Usability.png" alt=""/>
 								<h4>Usability Test</h4>
-								<p>The last evaluation we conducted was a Usability Test. Unlike the Heuristic Evaluation, Usability invited the user to participate in our study experiment. The participants were asked to perform the tasks according to our plan. The researchers evaluated difficulties participants faces when performing tasks. Participants were also asked to respond short questionnaires and a comprehensive post-task questionnaire to provide their perceived experience during the task. We then generated our findings after data analysis and discussion.</p>
+								<p>The last evaluation we conducted was a Usability Test. Unlike the Heuristic Evaluation, Usability Test invited the user to participate in our experiment. The participants were asked to perform the tasks planed by the researchers. The researchers evaluated difficulties participants faced when performing tasks. Participants were also asked to fill out questionnaires to provide their perceived experience during the task. We then generated our findings after data analysis and discussion.</p>
 							</div>
 						</div>
 						<!--span class="image featured"><img src="images/" alt="" /></span-->
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
-								<h3>What's my role in the project</h3>
-								<p>I was a highly engaged member of our team. I and my team member conducted all the evaluations mentioned above. I particularly dedicated myself in the design of interview and questionnaire questions. This experience improves my ability to capture people's true thoughts byfform asking the right questions.</p>
+								<h3>What I learn from this</h3>
+								<p>Due to the Non-Disclosure Agreement I cannot present the detail results here.</p>
+								<p>I learned a lot from this experience. The evaluation training I received will definitely serve as my stepping stone to pursue advanced HCI evaluation knowledge. Moreover, this project provided me a chance to develop hands-on experience, work with a field supervisor, and gain capability to address obstacles and challenges arise in real-world projects.</p>
 							</div>
 						</div>
 					</div>
@@ -108,7 +109,7 @@
 						<li><a href="mailto: that_charles@gapp.nthu.edu.tw" class="icon fa-envelope "><span class="label">Gmail</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>, <a href="#">Charles Chung</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>, <a href="#">Charles Chung</a></li><div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 					</ul>
 				</footer>
 
