add recent update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
+	</head> 
 	<body class="landing is-preload">
 		<div id="page-wrapper">
 
@@ -43,6 +43,7 @@
 					<p>Welcome to my universe</p>
 					<ul class="actions special">
 						<li><a href="#Portfolio" class="button primary">Portfolio</a></li>
+						<li><a href="/files/CV.pdf" class="button primary" download="CV">Download CV</a></li>
 						<li><a href="#main" class="button">About Me</a></li>
 					</ul>
 				</section>
@@ -53,7 +54,7 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Building a world that brings us closer <br>to each other, and to ourselves.</h2>
-							<p> Engineer | Researcher | Designer of User Experience</p>
+							<p> Software Engineer | User Experience Engineer | Marketing Technologiest</p>
 							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allow computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep understanding and concerning of humanity.</font>
 							</p>
 							<ul class="icons">
@@ -70,6 +71,24 @@
 					</section>
 
 					<section class="box special">
+						<div class="features-row">
+							<section>
+								<!--span class="icon major fa-bolt accent2"></span-->
+								<img class="image round" src="images/Logo/gatech.png" alt=""/>
+								<h3>M.S. Computer Science, Georgia Institute of Technology</h3>
+								<p>August 2019 - Present<br>Atlanta, Georgia
+								<ul>
+									<li>Cources: Big Data and Visual Analytics, Big Data Systems, Mobile Apps and Services, Principle UI Software</li>
+								</ul>
+							</section>
+							<section>
+								<!--span class="icon major fa-area-chart accent3"></span-->
+								<img class="image round2" src="images/Logo/kkday_logo_final.png" alt=""/>
+								<h3>KKday MarTech - Growth Hacker intern</h3>
+								<p>April 2019 - July 2019<br>Taipei, Taiwan</p>
+								<p></p>
+							</section>
+						</div>
 						<div class="features-row">
 							<section>
 								<!--span class="icon major fa-bolt accent2"></span-->
@@ -104,7 +123,7 @@
 							<section>
 								<!--span class="icon major fa-lock accent5"></span-->
 								<img class="image round" src="images/Logo/nthu-logo.png" alt=""/>
-								<h3>BA Computer Science, National Tsing Hua University (NTHU)</h3>
+								<h3>B.S. Computer Science, National Tsing Hua University (NTHU)</h3>
 								<p>Fall 2014 - Spring 2018<br>Hsinchu, Taiwan</p>
 								<p>Relevant Courses:<br>Data Structures (A), Data Science (A+), Machine Learning (A+), Introduction to Massive Data Analysis (A), Social Computing Application Design (A), User Experience and Usability Evaluation (A+), Applied Quantitative Methods for Human-Computer Interaction (A+)</p>
 							</section>
