modify image size

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<div class="features-row">
 							<section>
 								<!--span class="icon major fa-bolt accent2"></span-->
-								<img class="image round" src="images/Logo/gatech.png" alt=""/>
+								<img class="image round2" src="images/Logo/gatech.png" alt=""/>
 								<h3>M.S. Computer Science, Georgia Institute of Technology</h3>
 								<p>August 2019 - Present<br>Atlanta, Georgia
 								<ul>
