--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Building a world that brings us closer <br>to each other, and to ourselves.</h2>
-							<p> Software Engineer | User Experience Engineer | Marketing Technologiest</p>
+							<p> Software Engineer | User Experience Engineer | Marketing Technologist</p>
 							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allow computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep understanding and concerning of humanity.</font>
 							</p>
 							<ul class="icons">
