--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Charles from Hsinchu, Taiwan</a></h1>
+					<h1><a href="index.html">Atlanta, GA</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -39,7 +39,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>"Charles" Yu Lin Chung</h2>
+					<h2>Yu-Lin Chung</h2>
 					<p>Welcome to my universe</p>
 					<ul class="actions special">
 						<li><a href="#Portfolio" class="button primary">Portfolio</a></li>
@@ -54,12 +54,12 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Building a world that brings us closer <br>to each other, and to ourselves.</h2>
-							<p> Software Engineer | User Experience Engineer | Marketing Technologist</p>
-							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allow computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep understanding and concerning of humanity.</font>
+							<p> Frontend / Full Stack Software Engineer | User Experience Engineer </p>
+							<p><img class="image left round3" src="images/profile2.png" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allow computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep concern of humanity.</font>
 							</p>
 							<ul class="icons">
-								<li><a style="font-size: 2em;" class="icon">Contact Me @</a></li>
-								<li><a href="https://www.linkedin.com/in/%E7%A5%90%E9%9C%96-%E9%8D%BE-5bb7b6164/?locale=en_US" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a style="font-size: 2em;" class="icon">Contact me @</a></li>
+								<li><a href="https://www.linkedin.com/in/yu-lin-chung/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://github.com/thatcharles" class="icon fa-github"><span class="label">Github</span></a></li>
 								<!--li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li-->
 								<!--li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li-->
@@ -70,65 +70,6 @@
 						<!--span><img width="20%" float="left" src="images/profile.jpg" alt="" /></span-->
 					</section>
 
-					<section class="box special">
-						<div class="features-row">
-							<section>
-								<!--span class="icon major fa-bolt accent2"></span-->
-								<img class="image round2" src="images/Logo/gatech.png" alt=""/>
-								<h3>M.S. Computer Science, Georgia Institute of Technology</h3>
-								<p>August 2019 - Present<br>Atlanta, Georgia
-								<ul>
-									<li>Cources: Big Data and Visual Analytics, Big Data Systems, Mobile Apps and Services, Principle UI Software</li>
-								</ul>
-							</section>
-							<section>
-								<!--span class="icon major fa-area-chart accent3"></span-->
-								<img class="image round2" src="images/Logo/kkday_logo_final.png" alt=""/>
-								<h3>KKday MarTech - Growth Hacker intern</h3>
-								<p>April 2019 - July 2019<br>Taipei, Taiwan</p>
-								<p></p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<!--span class="icon major fa-bolt accent2"></span-->
-								<img class="image round" src="images/Logo/nctu_logo.png" alt=""/>
-								<h3>Research Assisstant at National Chiao Tung University (NCTU)</h3>
-								<p>February 2018 - Present<br>Hsinchu, Taiwan
-								<ul>
-									<li>Researching mobile related human-computer interaction topics especially using the technique of ubiquitous computing</li>
-									<li>Conducting research focusing on mobile computer-mediated communication (CMC), and mobile augmented reality(AR) pedestrian navigation here</li>
-								</ul>
-							</section>
-							<section>
-								<!--span class="icon major fa-area-chart accent3"></span-->
-								<img class="image round2" src="images/Logo/LiU.png" alt=""/>
-								<h3>Summer Academy at Linköping University</h3>
-								<p>Summer 2017<br>Linköping, Sweden</p>
-								<p>Summer academy with course credits—Studied Innovation and Entrepreneurship in a Swedish Context.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<!--span class="icon major fa-cloud accent4"></span-->
-								<img class="image round2" src="images/Logo/D2.png" alt=""/>
-								<h3>App UX Tester and QA engineer Summer Intern at D2 Technologies</h3>
-								<p>Summer 2016 as App UX Tester and front end developer<br>Summer 2017 as QA engineer<br>Hsinchu, Taiwan</p>
-								<ul> 
-									<li>Front end designer & mobile application UX tester</li>
-									<li>Drew the layout of official website, please visit:<a href="https://www.d2tech.com/">https://www.d2tech.com/</a></li>
-								</ul>
-								
-							</section>
-							<section>
-								<!--span class="icon major fa-lock accent5"></span-->
-								<img class="image round" src="images/Logo/nthu-logo.png" alt=""/>
-								<h3>B.S. Computer Science, National Tsing Hua University (NTHU)</h3>
-								<p>Fall 2014 - Spring 2018<br>Hsinchu, Taiwan</p>
-								<p>Relevant Courses:<br>Data Structures (A), Data Science (A+), Machine Learning (A+), Introduction to Massive Data Analysis (A), Social Computing Application Design (A), User Experience and Usability Evaluation (A+), Applied Quantitative Methods for Human-Computer Interaction (A+)</p>
-							</section>
-						</div>
-					</section>
 					<div class="box special" style="background-image: url('images/pic01.jpg')" id="Portfolio">
 						<header class="major">
 							<h2 style="color: #ffffff;">Portfolio</h2>
@@ -240,6 +181,78 @@
 						</div>
 					</div>
 
+					<div class="box special" style="background-image: url('images/pic01.jpg')" id="Experience">
+						<header class="major">
+							<h2 style="color: #ffffff;">Experience</h2>
+						</header>
+					</div>
+
+					<section class="box special">
+						<div class="features-row">
+							<section>
+								<!--span class="icon major fa-bolt accent2"></!--span-->
+								<img class="image round2" src="images/Logo/gatech.png" alt=""/>
+								<h3>M.S. Computer Science, Georgia Institute of Technology</h3>
+								<p>August 2019 - Present<br>Atlanta, Georgia
+								<ul>
+									<li>Cources: Big Data and Visual Analytics | Mobile Apps and Services | Principle UI Software | Ubiquitous Computing | Mobile Computing & IoT | Big Data Systems</li>
+								</ul>
+							</section>
+							<section>
+								<!--span class="icon major fa-area-chart accent3"></span-->
+								<img class="image round2" src="images/Logo/kkday_logo_final.png" alt=""/>
+								<h3>KKday MarTech - Growth Hacker intern</h3>
+								<p>April 2019 - July 2019<br>Taipei, Taiwan</p>
+								<ul>
+									<li>Performed User Journey Analysis, Email Automation and Customization, and Conversion Rate Optimization</li>
+									<li>Project Leader of Southeast Asia Markets App Promotion Campaign.</li>
+									<li>Led colleagues from IT, Marketing, and Content team in Thailand, Viet Nam, Singapore, and Taiwan to perform the campaign on schedule.</li>
+									<li>Reached <b>60%</b> boost of organic app downloads in the Southeast Asia Markets.</li>
+								</ul>
+							</section>
+						</div>
+						<div class="features-row">
+							<section>
+								<!--span class="icon major fa-bolt accent2"></span-->
+								<img class="image round" src="images/Logo/nctu_logo.png" alt=""/>
+								<h3>Research Assisstant at National Chiao Tung University (NCTU)</h3>
+								<p>February 2018 - Present<br>Hsinchu, Taiwan
+								<ul>
+									<li>Researching mobile related human-computer interaction topics especially using the technique of ubiquitous computing</li>
+									<li>Conducting research focusing on mobile computer-mediated communication (CMC), and mobile augmented reality(AR) pedestrian navigation here</li>
+								</ul>
+							</section>
+							<section>
+								<!--span class="icon major fa-area-chart accent3"></span-->
+								<img class="image round2" src="images/Logo/LiU.png" alt=""/>
+								<h3>Summer Academy at Linköping University</h3>
+								<p>Summer 2017<br>Linköping, Sweden</p>
+								<p>Summer academy with course credits—Studied Innovation and Entrepreneurship in a Swedish Context.</p>
+							</section>
+						</div>
+						<div class="features-row">
+							<section>
+								<!--span class="icon major fa-cloud accent4"></span-->
+								<img class="image round2" src="images/Logo/D2.png" alt=""/>
+								<h3>App UX Tester and QA engineer Summer Intern at D2 Technologies</h3>
+								<p>Summer 2016 as App UX Tester and front end developer<br>Summer 2017 as QA engineer<br>Hsinchu, Taiwan</p>
+								<ul> 
+									<li>Front end designer & mobile application UX tester</li>
+									<li>Drew the layout of official website, please visit:<a href="https://www.d2tech.com/">https://www.d2tech.com/</a></li>
+								</ul>
+								
+							</section>
+							<section>
+								<!--span class="icon major fa-lock accent5"></span-->
+								<img class="image round" src="images/Logo/nthu-logo.png" alt=""/>
+								<h3>B.S. Computer Science, National Tsing Hua University (NTHU)</h3>
+								<p>Fall 2014 - Spring 2018<br>Hsinchu, Taiwan</p>
+								<p>Relevant Courses:<br>Data Structures (A), Data Science (A+), Machine Learning (A+), Introduction to Massive Data Analysis (A), Social Computing Application Design (A), User Experience and Usability Evaluation (A+), Applied Quantitative Methods for Human-Computer Interaction (A+)</p>
+							</section>
+						</div>
+					</section>
+	
+
 				</section>
 
 			<!-- CTA -->
@@ -263,7 +276,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/%E7%A5%90%E9%9C%96-%E9%8D%BE-5bb7b6164/?locale=en_US" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://www.linkedin.com/in/yu-lin-chung/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://github.com/thatcharles" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto: that_charles@gapp.nthu.edu.tw" class="icon fa-envelope "><span class="label">Gmail</span></a></li>
 					</ul>
