--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<p>Welcome to my universe</p>
 					<ul class="actions special">
 						<li><a href="#Portfolio" class="button primary">Portfolio</a></li>
-						<li><a href="/files/CV.pdf" class="button primary" download="CV">Download CV</a></li>
+						<li><a href="/files/resuem.pdf" class="button primary" download="CV">Download CV</a></li>
 						<li><a href="#main" class="button">About Me</a></li>
 					</ul>
 				</section>
